Fix jitter, consistent icon-text spacing

--- a/frontend/components/IconStatusMessage/_styles.scss
+++ b/frontend/components/IconStatusMessage/_styles.scss
@@ -1,7 +1,7 @@
 .icon-status-message {
   display: flex;
   align-items: flex-start;
-  gap: $pad-small;
+  gap: $gap-icon-text;
   font-size: $x-small;
 }
 
